fix video size on tablet

--- a/src/web/pages/videolibrary/VideoLibrary.module.scss
+++ b/src/web/pages/videolibrary/VideoLibrary.module.scss
@@ -72,6 +72,11 @@
   justify-content: center;
   align-items: center;
 
+  @media (max-width: 1200px) {
+    width: 325px;
+    height: 200px;
+  }
+
   @media (max-width: 768px) {
     width: 250px;
     height: 175px;
